added DOM codes

--- a/index.html
+++ b/index.html
@@ -93,7 +93,9 @@
         </p>
       </section>
 
-      ...
+      <!--Accessing the DOM-->
+      document.getElementById('identifier'); document.getElementsByTagName('p');
+      document.getElementsByClassName('class-name'); ...
     </section>
 
     <!-- Relative Path -->
