added DOM codes

--- a/index.html
+++ b/index.html
@@ -95,7 +95,11 @@
 
       <!--Accessing the DOM-->
       document.getElementById('identifier'); document.getElementsByTagName('p');
-      document.getElementsByClassName('class-name'); ...
+      document.getElementsByClassName('class-name');
+
+      <!--Accessing the DOM-->
+      document.getElementById('identifier'); document.getElementsByTagName('p');
+      document.getElementsByClassName('class-name');
     </section>
 
     <!-- Relative Path -->
